# revery_notebook

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  GIT_GITHUB_GUIDE.md  LICENSE-ASSETS  LIVE_PREVIEW_DESIGN.md  NOTICE  README_RN.md  package-lock.json  package.json
.claude/: settings.json
build_tools/: build_cm.js  build_css.js  build_sidebar.js  cm_entry_slim.js  codemirror-bundle.js  package-lock.json  package.json
electron/: entitlements.mac.plist  fs_core.js  main.js  preload.js  zip_core.js
old_readme/: README.md  info.md  readme_gemini_deepseek.md
src/sidebar/: cards.js  dialogs.js  dnd.js  editor_media.js  fileops.js  helpers.js  icons.js  index.js  lifecycle.js  link_complete.js  link_rewrite.js  panel.js  project_scan.js  projects.js  save.js  search.js  state.js  tree.js  watcher.js  yaml_index.js
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json  pdf-print.json
tauri/icons/: icon.icns
tauri/src/: main.rs
test/: crash_consistency.test.js  find_e2e.test.js  fs_core.atomic.test.js  fs_core.paths.test.js  fs_core.settings.test.js  fs_core.volatile.test.js  link_rewrite.test.js  zip_core.test.js
test/helpers/: crash_writer.js  find_e2e_driver.js  find_e2e_main.js  payload.js
www/: dev.bat  dev.sh  index.html  main_rn.css  pdf_print.html  prose.css  prose_rn.css  revery_notebook.html
www/css_aesthetics/: info.txt  input.css  input_prose.css  main.css  main_max.css  prose.css  prose_max.css  theme.css
www/fonts/: FONT-LICENSE.txt
www/jvscrpt_and_css_extra/: codemirror-bundle.js  find_worker.js  highlight.min.js  markdown_editor_actions_cm.js  markdown_editor_cm_setup.js  markdown_editor_core_cm.js  markdown_editor_export.js  markdown_editor_find_cm.js  markdown_editor_lang.js  markdown_editor_layout.js  markdown_editor_livepreview.js  markdown_editor_menus.js  markdown_editor_sync.js  markdown_editor_theme.js  markdown_editor_tmplt_list.js  native_api.js  pdf_print.js  project_sidebar.js  revery_notebook_style.css
