[package]
name    = "revery-notebook"
version = "1.0.0"
edition = "2021"

# No [lib] section — all code lives in src/main.rs (binary only).
# The [lib] block requires src/lib.rs to exist; removing it fixes
# the "can't find library revery_notebook_lib" cargo error.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
tokio               = { version = "1", features = ["full"] }
notify              = "6"
trash               = "5"
libc = "0.2"
base64              = "0.22"
# Zip project export. deflate only — no encryption features on purpose:
# classic zip crypto is broken and we refuse to ship fake security.
zip                 = { version = "2", default-features = false, features = ["deflate"] }

# Native PDF print (Linux). The SAME versions wry already pulls in
# transitively (webkit2gtk 2.0.2 / gtk 0.18) — declaring them direct lets
# export_pdf_native drive WebKitPrintOperation for a dialog-free,
# consistent PDF. Linux-only; other targets fall back to window.print(),
# so the deps are target-gated.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0.2"
gtk        = "0.18"

[profile.release]
opt-level = "s"
lto       = "thin"
panic     = "abort"
